syntax = "proto3";

message Kick {
  int32 sensor_use_type = 1;
  bool kick_type = 2;
  int32 kick_strength = 3;
}

message AIsaacCommand {
  int32 robot_command_coordinate_system_type = 1;
  int32 target_x = 2;
  int32 target_y = 3;
  int32 target_angle = 4;
  bool vision_data_valid = 5;
  int32 current_x = 6;
  int32 current_y = 7;
  int32 current_angle = 8;
  Kick kick = 9;
}
